disable share button

--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
                         for each referral after you buy 1<br/>
 
                         <!-- Your share button code -->
-                        <div class="fb-share-button btn btn-default" 
+<!--                         <div class="fb-share-button btn btn-default" 
                           data-href="http://gamblehubspot.com/" data-layout="button" data-size="small" data-mobile-iframe="false">
                           <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
-                        </div>
+                        </div> -->
 
                         <a class="btn btn-default" href="#referral">Click here for more info</a>
                       </div>
@@ -180,7 +180,7 @@
 
               This will increase your chance for win.
 
-              <div id="fb-root"></div>
+<!--               <div id="fb-root"></div>
               <script>(function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) return;
@@ -189,11 +189,11 @@
                 fjs.parentNode.insertBefore(js, fjs);
               }(document, 'script', 'facebook-jssdk'));</script>
 
-                <!-- Your share button code -->
+
               <div class="fb-share-button btn btn-default" 
                 data-href="http://gamblehubspot.com/" data-layout="button" data-size="small" data-mobile-iframe="false">
                 <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
-              </div>
+              </div> -->
 
 
             </div>
