add share option

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Gamble Hub Spot.com" />
     <meta property="og:description"   content="A great chance to win upto 1 crore legally" />
-    <meta property="og:image"         content="http://gamblehubspot.com/public/refer.jpg" />
+    <meta property="og:image"         content="http://gamblehubspot.com/public/fbpost.jpg" />
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
@@ -29,6 +29,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="assets/js/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="assets/js/bootstrap.min.js"></script>
+
   </head>
   <body>
 
@@ -180,23 +186,24 @@
 
               This will increase your chance for win.
 
-<!--               <div id="fb-root"></div>
+
+              <div id="fb-root"></div>
               <script>(function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) return;
                 js = d.createElement(s); js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=343119449176997";
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=729056763900428";
                 fjs.parentNode.insertBefore(js, fjs);
               }(document, 'script', 'facebook-jssdk'));</script>
 
+              <div class="fb-share-button btn btn-default" data-href="http://gamblehubspot.com" 
+                data-layout="button" data-size="small" data-mobile-iframe="false">
+                <a class="fb-xfbml-parse-ignore" target="_blank" 
+                href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">
+                  Share on FaceBook
+                </a>
+              </div>
 
-              <div class="fb-share-button btn btn-default" 
-                data-href="http://gamblehubspot.com/" data-layout="button" data-size="small" data-mobile-iframe="false">
-                <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
-              </div> -->
-
-              <!-- Go to www.addthis.com/dashboard to customize your tools -->
-              <div class="addthis_inline_share_toolbox"></div>
             </div>
           </div>
         </div>
@@ -239,18 +246,9 @@
     <footer>
       Copyright 2016. gamblehubspot.com All Rights Reserved.
     </footer>
-    
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="assets/js/bootstrap.min.js"></script>
 
     <!-- Submit the Form to Google Using "AJAX" -->
     <script data-cfasync="false" type="text/javascript" src="google-form/form-submission-handler.js"></script>
-
-    <!-- Go to www.addthis.com/dashboard to customize your tools -->
-    <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-57dc17786d0caeba"></script>
 
   </body>
 </html>
