--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
         <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url"           content="http://gamblehubspot.com/" />
-    <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="Gamble Hub Spot.com" />
+    <meta property="og:url" content="http://gamblehubspot.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Gamble Hub Spot.com" />
     <meta property="og:description"   content="A great chance to win upto 1 crore legally" />
-    <meta property="og:image"         content="http://gamblehubspot.com/public/fbpost.jpg" />
+    <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg" />
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
@@ -26,8 +26,8 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="assets/js/html5shiv.min.js"></script>
+      <script src="assets/js/respond.min.js"></script>
     <![endif]-->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
