just give a try

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               This will increase your chance for win.
 
 
-              <div id="fb-root"></div>
+<!--               <div id="fb-root"></div>
               <script>(function(d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id)) return;
@@ -202,7 +202,11 @@
                 href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">
                   Share on FaceBook
                 </a>
-              </div>
+              </div> -->
+
+              <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com/sharer.html&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
+                Share on FaceBook
+              </a>
 
             </div>
           </div>
