update og image tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Gamble Hub Spot.com" />
     <meta property="og:description"   content="A great chance to win upto 1 crore legally" />
-    <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg" />
+
+    <meta property="og:image" content="public/fbpost.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="526">
+    <meta property="og:image:height" content="275">
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
@@ -204,7 +208,7 @@
                 </a>
               </div> -->
 
-              <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com/sharer.html&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
+              <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
                 Share on FaceBook
               </a>
 
