--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Gamble Hub Spot.com" />
     <meta property="og:description"   content="A great chance to win upto 1 crore legally" />
-    <meta property="og:image" content="public/fbpost.jpg">
+    <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg">
     <meta property="og:image:type" content="image/jpeg">
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
