--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
                           <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
                         </div> -->
 
+                        <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
+                          Share on FaceBook
+                        </a>
+
                         <a class="btn btn-default" href="#referral">Click here for more info</a>
                       </div>
                   </div>
