how it works content fixed

--- a/index.html
+++ b/index.html
@@ -226,27 +226,39 @@
 
         <p>
           <span class="title">Step 1</span>
-          <span class="big-text">We’ll notify you via email</span>
-          when we begin the contest
+          <span class="big-text">Register for FREE</span>
+          with us
         </p>
 
         <p>
           <span class="title">Step 2</span>
+          When we begin the contest
+          <span class="big-text">We’ll notify you via email</span>
+        </p>
+
+        <p>
+          <span class="title">Step 3</span>
+          Contest will happen for 
+          <span class="big-text">10 days</span>
+        </p>
+
+        <p>
+          <span class="title">Step 4</span>
           You can
           <span class="big-text">BUY</span>
           your ticket for Rs.100/-
         </p>
 
         <p>
-          <span class="title">Step 3</span>
+          <span class="title">Step 5</span>
           <span class="big-text">3 Winners are selected</span>
           by spinning the wheel
         </p>
 
         <p>
-          <span class="title">Step 4</span>
+          <span class="title">Step 6</span>
+          After 10 days from contest complete
           <span class="big-text">Contest results announced</span>
-          after 10 days from the date started
         </p>
       </div>
     </section>
