meta data update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="http://gamblehubspot.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Gamble Hub Spot.com" />
-    <meta property="og:description"   content="A great chance to win upto 1 crore legally" />
+    <meta property="og:description"   content="A great chance to win upto 1 crore" />
     <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg">
     <meta property="og:image:type" content="image/jpeg">
 
