--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                           data-href="http://gamblehubspot.com/" data-layout="button" data-size="small" data-mobile-iframe="false">
                           <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
                         </div> -->
-
+                        <br/>
                         <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
                           Share on FaceBook
                         </a>
@@ -208,8 +208,8 @@
                   Share on FaceBook
                 </a>
               </div> -->
-
-              <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
+              <br/>
+              <a target="_blank" class="btn btn-block btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
                 Share on FaceBook
               </a>
 
