--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Gamble Hub Spot.com || A great chance to win upto 1 crore</title>
 
+    <meta name="keywords" content="lottery, Win 1 crore, one crore, 1 crore, legall lottery, gambling, bumper, win-win, lotteries department, Casino, Gambling, Casino gambling" />
+
         <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
     <meta property="og:url" content="http://gamblehubspot.com/" />
