--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Gamble Hub Spot.com || A great chance to win upto 1 crore</title>
 
-    <meta name="keywords" content="lottery, Win 1 crore, one crore, 1 crore, legall lottery, gambling, bumper, win-win, lotteries department, Casino, Gambling, Casino gambling" />
+    <meta name="description" content="Gamble Hub Spot is your one-stop site for everything relating to not just Indian Lottery games, but also lotteries from around the world such as the US Powerball and EuroMillions." />
+
+    <meta name="keywords" content="lottery, Win 1 crore, one crore, 1 crore, legall lottery, gambling, bumper, win-win, lotteries department, Casino, Gambling, Casino gambling, indian lottery tickets, Lottery India, indian online lottery, indian lottery" />
 
         <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
