--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
         <!-- You can use Open Graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-    <meta property="og:url" content="http://gamblehubspot.com/" />
+    <meta property="og:url" content="http://gamblehubspot.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Gamble Hub Spot.com" />
-    <meta property="og:description"   content="A great chance to win upto 1 crore with Rs.100" />
+    <meta property="og:title" content="A great chance to win upto 1 crore with just Rs.100, Register now for FREE" />
+    <meta property="og:description"   content="We'll send contest starting date to your email, You can buy your ticket for Rs.100 and participate" />
     <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg">
     <meta property="og:image:type" content="image/jpeg">
 
