--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="http://gamblehubspot.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="A great chance to win upto 1 crore with just Rs.100, Register now for FREE" />
-    <meta property="og:description"   content="We'll send contest starting date to your email, You can buy your ticket for Rs.100 and participate" />
+    <meta property="og:description"   content="Refer a Friend GET A FREE TICKET for each referral after you buy 1" />
     <meta property="og:image" content="http://gamblehubspot.com/public/fbpost.jpg">
     <meta property="og:image:type" content="image/jpeg">
 
