--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap -->
+    <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/gamblehubspot.css" rel="stylesheet">
+    <link href="assets/css/add-to-cart.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
 
@@ -57,13 +59,80 @@
         <div class="row">
           <div class="col-md-12">
             <div class="row hero-form">
-              <div class="col-md-4 major-content">
+              <div class="col-md-5 major-content">
                 <img alt="A great chance to win upto 1 crore" class="img-responsive" width="330" src="assets/images/A-great-chance-to-win-upto-1-crore.png"/>
               </div>
-              <div class="col-md-8 register-form">
-                <h3>Register for free</h3>
+              <div class="col-md-7 register-form">
+                <h3>Pick your 5 lucky number</h3>
+
+                <div class="lottery-numbers">
+                  <button type="button" class="btn btn-default">1</button>
+                  <button type="button" class="btn btn-default">2</button>
+                  <button type="button" class="btn btn-default">3</button>
+                  <button type="button" class="btn btn-default">4</button>
+                  <button type="button" class="btn btn-default">5</button>
+                  <button type="button" class="btn btn-default">6</button>
+                  <button type="button" class="btn btn-default">7</button>
+                  <button type="button" class="btn btn-default">8</button>
+                  <button type="button" class="btn btn-default">9</button>
+                  <button type="button" class="btn btn-default">10</button>
+
+                  <button type="button" class="btn btn-default">11</button>
+                  <button type="button" class="btn btn-default">12</button>
+                  <button type="button" class="btn btn-default">13</button>
+                  <button type="button" class="btn btn-default">14</button>
+                  <button type="button" class="btn btn-default">15</button>
+                  <button type="button" class="btn btn-default">16</button>
+                  <button type="button" class="btn btn-default">17</button>
+                  <button type="button" class="btn btn-default">18</button>
+                  <button type="button" class="btn btn-default">19</button>
+                  <button type="button" class="btn btn-default">20</button>
+
+                  <button type="button" class="btn btn-default">21</button>
+                  <button type="button" class="btn btn-default">22</button>
+                  <button type="button" class="btn btn-default">23</button>
+                  <button type="button" class="btn btn-default">24</button>
+                  <button type="button" class="btn btn-default">25</button>
+                  <button type="button" class="btn btn-default">26</button>
+                  <button type="button" class="btn btn-default">27</button>
+                  <button type="button" class="btn btn-default">28</button>
+                  <button type="button" class="btn btn-default">29</button>
+                  <button type="button" class="btn btn-default">30</button>
+
+                  <button type="button" class="btn btn-default">31</button>
+                  <button type="button" class="btn btn-default">32</button>
+                  <button type="button" class="btn btn-default">33</button>
+                  <button type="button" class="btn btn-default">34</button>
+                  <button type="button" class="btn btn-default">35</button>
+                  <button type="button" class="btn btn-default">36</button>
+                  <button type="button" class="btn btn-default">37</button>
+                  <button type="button" class="btn btn-default">38</button>
+                  <button type="button" class="btn btn-default">39</button>
+                  <button type="button" class="btn btn-default">40</button>
+
+                  <button type="button" class="btn btn-default">41</button>
+                  <button type="button" class="btn btn-default">42</button>
+                  <button type="button" class="btn btn-default">43</button>
+                  <button type="button" class="btn btn-default">44</button>
+                  <button type="button" class="btn btn-default">45</button>
+                  <button type="button" class="btn btn-default">46</button>
+                  <button type="button" class="btn btn-default">47</button>
+                  <button type="button" class="btn btn-default">48</button>
+                  <button type="button" class="btn btn-default">49</button>
+                  <button type="button" class="btn btn-default">50</button>
+                </div>
 
                 <div class="row">
+                  <div class="col-md-8 lottery-selected-num">
+                    <span>1</span>-<span>50</span>-<span>12</span>-<span>13</span>-<span>45</span>
+                  </div>
+                  <div class="col-md-4">
+                    <!-- <button class="btn btn-block btn-large btn-primary">Add to Cart</button> -->
+                    <a href="#0" class="cd-add-to-cart btn btn-block btn-large btn-primary" data-price="25.99">Add To Cart</a>
+                  </div>
+                </div>
+
+                <!-- <div class="row">
                   <form id="gform" method="POST"
   action="https://script.google.com/macros/s/AKfycbzSfBsswB9IUasBHxWMuFwwia3tnmRA83uPtwR0Ilnbqf2ugGU/exec">
                     <div class="col-md-6">
@@ -124,7 +193,7 @@
                     </div>
                   </form>
 
-                    <!-- Customise the Thankyou Message People See when they submit the form: -->
+
                   <div style="display:none;" id="thankyou_message">
                     <h2>Thank you for register with us!</h2>
                       <p>We’ll notify you via email<br/>
@@ -135,11 +204,6 @@
                         <h2>Get a free ticket</h2>
                         for each referral after you buy 1<br/>
 
-                        <!-- Your share button code -->
-<!--                         <div class="fb-share-button btn btn-default" 
-                          data-href="http://gamblehubspot.com/" data-layout="button" data-size="small" data-mobile-iframe="false">
-                          <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fgamblehubspot.com%2F&amp;src=sdkpreparse">Share on FaceBook</a>
-                        </div> -->
                         <br/>
                         <a target="_blank" class="btn btn-default" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=http://gamblehubspot.com&amp;p[images][0]=http://gamblehubspot.com/public/fbpost.jpg&amp;p[title]=A great chance to win upto 1 crore with just Rs.100&amp;p[summary]=You are one step away from playing your game!">
                           Share on FaceBook
@@ -149,7 +213,7 @@
                       </div>
                   </div>
 
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -224,7 +288,7 @@
       </div>
     </section>
 
-    <section id="howitworks">
+    <!-- <section id="howitworks">
       <div class="container text-center">
         <h6>HOW IT WORKS</h6>
 
@@ -265,8 +329,36 @@
           <span class="big-text">Contest results announced</span>
         </p>
       </div>
-    </section>
+    </section> -->
 
+<div class="cd-cart-container empty">
+  <a href="#0" class="cd-cart-trigger">
+    Cart
+    <ul class="count"> <!-- cart items count -->
+      <li>0</li>
+      <li>0</li>
+    </ul> <!-- .count -->
+  </a>
+
+  <div class="cd-cart">
+    <div class="wrapper">
+      <header>
+        <h2>Cart</h2>
+        <span class="undo">Item removed. <a href="#0">Undo</a></span>
+      </header>
+      
+      <div class="body">
+        <ul>
+          <!-- products added to the cart will be inserted here using JavaScript -->
+        </ul>
+      </div>
+
+      <footer>
+        <a href="#0" class="checkout btn"><em>Checkout - $<span>0</span></em></a>
+      </footer>
+    </div>
+  </div> <!-- .cd-cart -->
+</div> <!-- cd-cart-container -->
 
     <footer>
       Copyright 2016. gamblehubspot.com All Rights Reserved.
@@ -275,6 +367,13 @@
     <!-- Submit the Form to Google Using "AJAX" -->
     <script data-cfasync="false" type="text/javascript" src="google-form/form-submission-handler.js"></script>
 
+    <script type="text/javascript" src="assets/js/ghp.js"></script>
+
+
+<script>
+  if( !window.jQuery ) document.write('<script src="assets/js/jquery-3.0.0.min.js"><\/script>');
+</script>
+<script type="text/javascript" src="assets/js/add-to-cart.js"></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
