--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="row">
                   <div class="col-md-7 lottery-selected-num">
-                    <span>1</span>-<span>50</span>-<span>12</span>-<span>13</span>-<span>45</span>
+                    <span>--</span>-<span>--</span>-<span>--</span>-<span>--</span>-<span>--</span>
                   </div>
                   <div class="col-md-5">
                     <!-- <button class="btn btn-block btn-large btn-primary">Add to Cart</button> -->
