--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   </div>
                   <div class="col-md-5">
                     <!-- <button class="btn btn-block btn-large btn-primary">Add to Cart</button> -->
-                    <a href="#0" class="cd-add-to-cart btn btn-block btn-large btn-primary" data-price="25.99">Add To Cart</a>
+                    <a href="#0" class="cd-add-to-cart btn btn-block btn-large btn-primary" data-price="105.00">Add To Cart</a>
                   </div>
                 </div>
 
@@ -354,7 +354,7 @@
       </div>
 
       <footer>
-        <a href="#0" class="checkout btn"><em>Checkout - $<span>0</span></em></a>
+        <a href="#0" class="checkout btn"><em>Checkout - Rs.<span>0</span></em></a>
       </footer>
     </div>
   </div> <!-- .cd-cart -->
@@ -368,6 +368,8 @@
     <script data-cfasync="false" type="text/javascript" src="google-form/form-submission-handler.js"></script>
 
     <script type="text/javascript" src="assets/js/ghp.js"></script>
+
+
 
 
 <script>
