--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       </div>
 
       <footer>
-        <a href="https://www.instamojo.com/gamblehubspot/ticket-0d583/?intent=buy" target="_blank" class="checkout btn"><em>Checkout - Rs.<span>0</span></em></a>
+        <a id="instamojo" href="https://www.instamojo.com/gamblehubspot/ticket-0d583/?intent=buy" target="_blank" class="checkout btn"><em>Checkout - Rs.<span>0</span></em></a>
       </footer>
     </div>
   </div> <!-- .cd-cart -->
