--- a/thankyou.html
+++ b/thankyou.html
@@ -52,8 +52,8 @@
         </a>
 
         <h1>
-          Thank You for the Purchase<br/>
-          We'll contact you soon.
+          Thanks for purchasing the ticket.<br/>
+          We will mail you on the day of draw and announce the winners.
         </h1>
 
         <div class="text-center" style="margin-bottom:50px;">
