--- a/thankyou.html
+++ b/thankyou.html
@@ -46,21 +46,24 @@
   <body>
 
     <section id="hero">
-      <div class="container">
+      <div class="container text-center">
         <a href="/" title="Gamble Hub Spot.com">
           <object class="brand img-responsive" width="290" data="assets/images/logo.svg" type="image/svg+xml"></object>
         </a>
-
-        <h1>
-          Thanks for purchasing the ticket.<br/>
-          We will mail you on the day of draw and announce the winners.
-        </h1>
-
-        <div class="text-center" style="margin-bottom:50px;">
-          <a href="/" class="btn btn-default">Go back to Home</a>
-        <div>
       </div>
     </section>
+
+    <div class="container text-center thankYou">
+      <h1>
+        Thanks for purchasing the ticket.
+      </h1>
+      <p>
+        We will mail you on the day of draw and announce the winners.
+      </p>
+      <div class="text-center" style="margin-bottom:50px;">
+        <a href="/" class="btn btn-default">Go back to Home</a>
+      </div>
+    </div>
 
 
     <footer>
