--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <div class="col-md-5">
                     <!-- <button class="btn btn-block btn-large btn-primary">Add to Cart</button> -->
                     <!-- <a href="#0" class="cd-add-to-cart btn btn-block btn-large btn-primary" data-price="105.00">Buy Now</a> -->
-                    <a id="instamojo" href="https://www.instamojo.com/gamblehubspot/ticket-0d583/?intent=buy" class="cd-add-to-cart2 btn btn-block btn-large btn-primary">Buy Now</a>
+                    <button id="instamojo" class="cd-add-to-cart2 btn btn-block btn-large btn-primary">Buy Now</button>
                   </div>
                 </div>
               </div>
